--- a/src/app/modules/posts-list/posts-list.component.html
+++ b/src/app/modules/posts-list/posts-list.component.html
@@ -5,7 +5,7 @@
 <app-ic-list *ngIf="isICList" [posts]="posts"></app-ic-list>
 
 <!-- Gallery-list -->
-<app-gallery-list *ngIf="isGalleryList" [posts]="posts"></app-gallery-list>
+<app-gallery-list *ngIf="isGalleryList()" [posts]="posts"></app-gallery-list>
 
 <!-- Row-list -->
-<app-row-list *ngIf="isRowList" [posts]="posts"></app-row-list>
+<app-row-list *ngIf="isRowList()" [posts]="posts"></app-row-list>
