--- a/src/app/sections/frontpage/frontpage.component.html
+++ b/src/app/sections/frontpage/frontpage.component.html
@@ -11,10 +11,8 @@
     <a href="/podcasts" class="subsection-header">
       Podcasts
     </a>
-    <!-- Podcasts subsection (gallery list)
-    <app-posts-list [listType]="2" [posts]="this.topPosts"></app-posts-list> -->
-
-    <br>
+    <!-- Podcasts subsection (gallery list) -->
+    <app-posts-list [listType]="2" [posts]="this.podcastSubSectionPosts"></app-posts-list>
 
     <!-- Technology subsection (row-list) -->
     <a href="/technology" class="subsection-header">
