--- a/src/app/modules/post-card/rowlist-post-card/rowlist-post-card.component.css
+++ b/src/app/modules/post-card/rowlist-post-card/rowlist-post-card.component.css
@@ -32,6 +32,7 @@
 
 .card-image-mobile {
     max-width: 100%;
+    max-height: 375px;
     padding-top: 7px;
     padding-left: 15px;
     padding-right: 15px;
