--- a/src/app/modules/posts-list/gallery-list/gallery-list.component.css
+++ b/src/app/modules/posts-list/gallery-list/gallery-list.component.css
@@ -1,17 +1,20 @@
 .block {
   display: flex;
   max-width: 1175px;
+}
+
+.primary-slide {
+  width: 54%;
+  float: left;
+  height: 585px;
+  padding-top: 8px;
+  padding-left: 18px;
+  padding-right: 18px;
+  padding-bottom: 16px;
+  margin-right: 2%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-top: 6px solid #000971;
   margin-bottom: 3%;
-}
-
-.slideshow {
-  flex: 2;
-  padding-top: 25px;
-  padding-left: 22px;
-  padding-right: 22px;
-  padding-bottom: 25px;
 }
 
 .slide {
@@ -19,13 +22,23 @@
   width: 100%;
 }
 
+.card-topic {
+  padding-bottom: 8px;
+  margin-bottom: 0;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: gray;
+}
+
 .slide:hover .slide-overlay {
-  width: 100%;
+  opacity: 0.8;
 }
 
 .slide-image {
   display: block;
   width: 100%;
+  height: 515px;
 }
 
 .slide-overlay {
@@ -35,22 +48,30 @@
   right: 0;
   background-color: black;
   overflow: hidden;
-  width: 0;
+  width: 100%;
   height: 100%;
   transition: .3s ease;
+  opacity: 0;
+}
+
+.slide-description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #000971;
+  overflow: hidden;
+  width: 100%;
+  height: 27.5%;
   opacity: 0.9;
 }
 
 .slide-title {
   color: white;
-  font-size: 20px;
   position: absolute;
-  top: 55%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
+  top: 15%;
+  left: 10%;
+  text-align: center;
   font-family: 'Cairo', sans-serif;
   font-weight: 600;
   font-size: 38px;
@@ -59,50 +80,51 @@
 
 .slide-teaser {
   color: white;
-  font-size: 20px;
   position: absolute;
-  top: 63%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
+  top: 55%;
+  left: 10%;
+  text-align: center;
   font-family: 'Cairo', sans-serif;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 22px;
   text-decoration: none;
 }
 
 .listen-cta {
   color: white;
-  font-size: 20px;
   position: absolute;
-  top: 80%;
+  top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  white-space: nowrap;
+  text-align: center;
   font-family: 'Cairo', sans-serif;
-  font-weight: 500;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 38px;
   text-decoration: none;
 }
 
 /* specific to second post */
 
 .secondary-slide {
-  flex: 1;
-  padding-top: 25px;
-  padding-right: 22px;
-  padding-bottom: 25px;
+  width: 42%;
+  float: left;
+  height: 585px;
+  padding-top: 8px;
+  padding-left: 18px;
+  padding-right: 18px;
+  padding-bottom: 16px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-top: 6px solid #000971;
+  margin-bottom: 3%;
 }
 
 .slide-image-smaller {
   display: block;
   object-fit: cover;
   width: 100%;
-  height: 555px;
+  height: 515px;
 }
 
 .slide-title-smaller {
@@ -110,7 +132,7 @@
   font-size: 20px;
   position: absolute;
   top: 40%;
-  left: 50%;
+  left: 40%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -125,7 +147,7 @@
   color: white;
   font-size: 20px;
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
