--- a/src/app/modules/posts-list/gallery-list/gallery-list.component.html
+++ b/src/app/modules/posts-list/gallery-list/gallery-list.component.html
@@ -1,14 +1,21 @@
-<div class="block">
+<div>
 
   <!-- Primary slide -->
-  <div class="slideshow">
+  <div class="primary-slide">
+    <!-- Topic -->
+    <p class="card-topic">
+      {{ this.primaryPost.topic | uppercase }}
+    </p>
+    <!-- Secondary post -->
     <div class="slide">
       <a href="{{ this.primaryPost.content }}">
         <img class="slide-image" src="{{ this.primaryPost.featuredArtURL }}">
-        <div class="slide-overlay">
-          <div class="listen-cta">LISTEN —> </div>
+        <div class="slide-description">
           <div class="slide-title">{{ this.primaryPost.title }}</div>
           <div class="slide-teaser">{{ this.primaryPost.teaser }}</div>
+        </div>
+        <div class="slide-overlay">
+          <div class="listen-cta">Listen</div>
         </div>
       </a>
     </div>
@@ -16,13 +23,19 @@
 
   <!-- Seconday slides -->
   <div class="secondary-slide">
+    <!-- Topic -->
+    <p class="card-topic">
+      {{ this.secondaryPost.topic | uppercase }}
+    </p>
+    <!-- Secondary post -->
     <div class="slide">
       <a href="{{ this.secondaryPost.content }}">
         <img class="slide-image-smaller" src="{{ this.secondaryPost.featuredArtURL }}">
-        <div class="slide-overlay">
+        <div class="slide-description">
           <div class="slide-title-smaller">{{ this.secondaryPost.title }}</div>
-          <div class="slide-teaser-smaller">{{ this.secondaryPost.teaser }}</div>
-          <div class="listen-cta-smaller">LISTEN —> </div>
+        </div>
+        <div class="slide-overlay">
+          <div class="listen-cta">Listen</div>
         </div>
       </a>
     </div>
