--- a/src/app/sections/about/about-post/about-post.component.css
+++ b/src/app/sections/about/about-post/about-post.component.css
@@ -1,6 +1,6 @@
 .image {
-    width: 40%;
-    height: 40%;
+    width: 35%;
+    height: 35%;
 }
 
 .image-inline {
@@ -44,8 +44,40 @@
     font-weight: 600;
     font-size: 28px;
     color: black;
+    text-decoration: none;
 }
 
 .padding {
     width: 10%;
+}
+
+.fa-envelope {
+  padding: 20px;
+  padding-top: 0px;
+  padding-left: 0px;
+  font-size: 25px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  color: #ff6666;
+}
+
+.fa-twitter {
+  padding: 20px;
+  padding-top: 0px;
+  font-size: 25px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  color: #ff6666;
+}
+
+.fa-twitter:hover {
+    color: #00ccff
+}
+
+.fa-envelope:hover {
+    color: #00ff00;
 }
