--- a/src/app/modules/post-card/column-post-card/column-post-card.component.html
+++ b/src/app/modules/post-card/column-post-card/column-post-card.component.html
@@ -4,19 +4,19 @@
   </p>
 
   <!-- Featured image -->
-  <a href="{{ post.content }}">
+  <a href="{{ this.getPostLink() }}">
     <img [src]="post.featuredArtURL" [alt]="post.featuredArtAlt" [ngClass]="getImageClass()">
   </a>
 
   <!-- Card title -->
   <h2 class="card-title-h2">
-    <a href="{{ post.content }}" class="card-title">{{ post.title }}</a>
+    <a href="{{ this.getPostLink() }}" class="card-title">{{ post.title }}</a>
   </h2>
 
 
   <!-- Card teaser -->
   <p class="card-teaser-p">
-    <a href="{{ post.content }}" class="card-teaser">{{ post.teaser }}</a>
+    <a href="{{ this.getPostLink() }}" class="card-teaser">{{ post.teaser }}</a>
   </p>
 
   <!-- Byline -->
