Hooking up podcast and textpost pages

--- a/src/app/modules/post-page/podcast-post-page/podcast-post-page.component.html
+++ b/src/app/modules/post-page/podcast-post-page/podcast-post-page.component.html
@@ -3,6 +3,6 @@
 <!-- Padding under navbar -->
 <div class="page-content-spacing"></div>
 
-<div>
+<ng-container>
   <h1>{{ postData.title }}</h1>
-</div>
+</ng-container>
