--- a/src/app/modules/post-page/post-page/post-page.component.html
+++ b/src/app/modules/post-page/post-page/post-page.component.html
@@ -1,1 +1,5 @@
-<p>post-page works!</p>
+<!-- Podcast post -->
+<app-text-post-page *ngIf="this.isPostLoaded() && !this.isPodcastPost()" [postData]="this.post"></app-text-post-page>
+
+<!-- Text post -->
+<app-podcast-post-page *ngIf="this.isPostLoaded() && this.isPodcastPost()" [postData]="this.post"></app-podcast-post-page>
