--- a/src/app/modules/post-page/text-post-page/text-post-page.component.css
+++ b/src/app/modules/post-page/text-post-page/text-post-page.component.css
@@ -9,7 +9,13 @@
   text-align: center;
 }
 
-.featured-art{
+.featured-art-mobile {
+  max-width: 80%;
+  height: auto;
+  text-align: center;
+}
+
+.featured-art-full {
   width: auto;
   height: 80vh;
   overflow: hidden;
@@ -23,7 +29,10 @@
   bottom: 0px;
   left: 30px;
   background-color: #000971;
-  padding: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 15px;
+  padding-right: 15px;
   transform: skewX(-10deg);
 }
 
@@ -32,12 +41,18 @@
   padding-bottom: 10px;
   text-align: left;
   transform: skewX(10deg);
-  color: white
+  color: white;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 600;
+  font-size: 32px;
 }
 
 .post-teaser {
   padding-left: 15px;
   padding-right: 100px;
   text-align: left;
-  color: #A4A4A4
+  color: #A4A4A4;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 300;
+  font-size: 24px;
 }
