Adding navbar to page

--- a/src/app/modules/post-page/text-post-page/text-post-page.component.html
+++ b/src/app/modules/post-page/text-post-page/text-post-page.component.html
@@ -1,7 +1,7 @@
-<app-navigation-bar [show]="false">
-  <!-- Padding under navbar -->
-  <div class="page-content-spacing"></div>
-</app-navigation-bar>
+<app-navigation-bar [show]="true"></app-navigation-bar>
+
+<!-- Padding under navbar -->
+<div class="page-content-spacing"></div>
 
 <!-- Div showing featured art and headline -->
 <!-- Featured art -->
