Adding byline section

--- a/src/app/modules/post-card/column-post-card/column-post-card.component.html
+++ b/src/app/modules/post-card/column-post-card/column-post-card.component.html
@@ -22,7 +22,7 @@
   <!-- Byline -->
   <p align="right" class="card-byline-section">By
     <ng-container *ngFor="let author of post.authors">
-      <a class="card-byline" href="{{ author.profilePageUrl }}">{{ author.name | uppercase }}</a>
+      <a class="card-byline" href="{{ author.profilePageUrl }}">{{ author.name }}</a>
     </ng-container>
   </p>
 </div>
