--- a/src/app/modules/posts-list/gallery-list/gallery-list.component.html
+++ b/src/app/modules/posts-list/gallery-list/gallery-list.component.html
@@ -4,7 +4,7 @@
   <div class="primary-slide">
     <!-- Topic -->
     <p class="card-topic">
-      {{ this.primaryPost.topic | uppercase }}
+      {{ this.primaryPost.topic }}
     </p>
     <!-- Secondary post -->
     <div class="slide">
@@ -25,7 +25,7 @@
   <div class="secondary-slide">
     <!-- Topic -->
     <p class="card-topic">
-      {{ this.secondaryPost.topic | uppercase }}
+      {{ this.secondaryPost.topic }}
     </p>
     <!-- Secondary post -->
     <div class="slide">
