--- a/src/app/modules/post-page/text-post-page/text-post-page.component.css
+++ b/src/app/modules/post-page/text-post-page/text-post-page.component.css
@@ -56,3 +56,52 @@
   font-weight: 300;
   font-size: 24px;
 }
+
+.author-byline-container {
+  padding-top: 20px;
+  padding-left: 10%;
+}
+
+.author-byline-by {
+  font-family: 'Cairo', sans-serif;
+  font-weight: 700;
+  color: black;
+  font-size: 18px;
+  padding-right: 15px;
+  padding-top: 10px;
+}
+
+.image-cropper {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.image-cropper-mobile {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.author-byline-image {
+  margin: 0 auto;
+  height: auto;
+  width: 100%;
+}
+
+.author-byline {
+  padding-right: 3%;
+  padding-left: 1%;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  color: gray;
+}
+
+.author-byline-published-date {
+
+}
