--- a/src/app/modules/post-page/text-post-page/text-post-page.component.html
+++ b/src/app/modules/post-page/text-post-page/text-post-page.component.html
@@ -15,6 +15,19 @@
   </div>
 </div>
 
+<!-- Byline -->
+<div class="author-byline-container">
+  <p align="left" class="author-byline-by">By</p>
+  <ng-container *ngFor="let author of postData.authors">
+    <div [ngClass]="getBylineInlineClass()">
+      <a href="{{ author.profilePageUrl }}">
+        <img [src]="getAuthorImageUrl(author)" alt="Profile photo of {{ author.name }}" class="author-byline-image">{{ author.name }}
+      </a>
+    </div>
+    <a class="author-byline" href="{{ author.profilePageUrl }}">{{ author.name }}</a>
+  </ng-container>
+</div>
+
 
 <!-- Footer -->
 <app-footer></app-footer>
