--- a/src/app/modules/post-page/text-post-page/text-post-page.component.html
+++ b/src/app/modules/post-page/text-post-page/text-post-page.component.html
@@ -41,6 +41,7 @@
 </div>
 
 <!-- Show post content -->
+<div [innerHTML]="this.getPostContent()"></div>
 
 <!-- Footer -->
 <app-footer></app-footer>
