--- a/src/app/modules/post-card/horizontal-post-card/horizontal-post-card.component.html
+++ b/src/app/modules/post-card/horizontal-post-card/horizontal-post-card.component.html
@@ -5,7 +5,7 @@
     </p>
 
     <!-- Featured image -->
-    <a href="{{ post.content }}">
+    <a href="{{ this.getPostLink() }}">
       <img [src]="post.featuredArtURL" [alt]="post.featuredArtAlt" [ngClass]="getImageClass()">
     </a>
   </div>
@@ -13,19 +13,19 @@
   <div [ngClass]="getGroupClass(2)">
     <!-- Card title -->
     <h2 class="card-title-h2">
-      <a href="{{ post.content }}" class="card-title">{{ post.title }}</a>
+      <a href="{{ this.getPostLink()}}" class="card-title">{{ post.title }}</a>
     </h2>
 
 
     <!-- Card teaser -->
     <p class="card-teaser-p">
-      <a href="{{ post.content }}" class="card-teaser">{{ post.teaser }}</a>
+      <a href="{{ this.getPostLink() }}" class="card-teaser">{{ post.teaser }}</a>
     </p>
 
     <!-- Byline -->
     <p [ngClass]="getCardBylineSectionClass()">By
       <ng-container *ngFor="let author of post.authors">
-        <a class="card-byline" href="{{ author.profilePageUrl }}">{{ author.name | uppercase }}</a>
+        <a class="card-byline" href="{{ author.profilePageUrl }}">{{ author.name }}</a>
       </ng-container>
     </p>
   </div>
