--- a/src/app/modules/post-card/horizontal-post-card/horizontal-post-card.component.html
+++ b/src/app/modules/post-card/horizontal-post-card/horizontal-post-card.component.html
@@ -1,8 +1,10 @@
 <div class="card" [style.width.%]="getCardWidthInPercentage()" [style.height.px]="getCardHeightInPixels()">
   <div [ngClass]="getGroupClass(1)">
-    <p class="card-topic">
-      {{ post.topic | uppercase }}
-    </p>
+    <ng-container *ngFor="let topic of post.topics">
+      <p class="card-topic">
+        {{ topic | uppercase }}
+      </p>
+    </ng-container>
 
     <!-- Featured image -->
     <a href="{{ this.getPostLink() }}">
