--- a/src/app/sections/page-not-found/page-not-found/page-not-found.component.html
+++ b/src/app/sections/page-not-found/page-not-found/page-not-found.component.html
@@ -11,6 +11,7 @@
 <img src="{{ iconUrl }}" class="section-icon horiz-padding-2">
 
 <p class="horiz-padding cairo-paragraph"><b>The page you're looking for doesn't exist.</b></p>
+<p class="horiz-padding cairo-paragraph"><b>How about going to <a href="/">one that does</a>?</b></p>
 
 <!-- Footer -->
 <app-footer></app-footer>
