--- a/src/app/modules/post-card/featured-post-card/featured-post-card.component.html
+++ b/src/app/modules/post-card/featured-post-card/featured-post-card.component.html
@@ -1,7 +1,9 @@
 <div class="card" [style.width.%]="getCardWidthInPercentage()" [style.height.px]="getCardHeightInPixels()">
-  <p class="card-topic">
-    {{ post.topic | uppercase }}
-  </p>
+  <ng-container *ngFor="let topic of post.topics">
+    <p class="card-topic">
+      {{ topic | uppercase }}
+    </p>
+  </ng-container>
 
   <!-- Featured image -->
   <a href="{{ this.getPostLink() }}">
