--- a/src/app/modules/post-card/rowlist-post-card/rowlist-post-card.component.html
+++ b/src/app/modules/post-card/rowlist-post-card/rowlist-post-card.component.html
@@ -1,7 +1,7 @@
 <div class="card" [style.width.%]="getCardWidthInPercentage()" [style.height.px]="getCardHeightInPixels()"
   [style.max-width.px]="getMaxWidthInPixels()">
-  <p class="card-topic">
-    {{ post.topic | uppercase }}
+  <p class="card-topic" *ngFor="let topic of post.topics">
+    {{ topic | uppercase }}
   </p>
 
   <!-- Featured image -->
