--- a/src/app/sections/author/author.component.html
+++ b/src/app/sections/author/author.component.html
@@ -22,9 +22,13 @@
   <app-about-post [profile]="this.authorProfile" *ngIf="this.isAuthorValid"></app-about-post>
 </div>
 
+<!-- Show latest posts from the author -->
 <hr *ngIf="this.isAuthorValid" class="author-hr">
 <p  *ngIf="this.isAuthorValid" class="cairo-heading" align="center">THE LATEST FROM THIS AUTHOR</p>
-<hr *ngIf="this.isAuthorValid" class="author-hr">
+<hr *ngIf="this.isAuthorValid" class="author-hr" class="horiz-padding">
+<div *ngFor="let post of authorPosts" [ngClass]="getAuthorPostsClass()">
+  <app-post-card [post]="post" [cardType]="2"></app-post-card>
+</div>
 
 <!-- Footer -->
 <app-footer *ngIf="this.isAuthorValid"></app-footer>
