Adding logic to show if author hasn't published anything

--- a/src/app/sections/author/author.component.css
+++ b/src/app/sections/author/author.component.css
@@ -25,6 +25,13 @@
     color: gray;
 }
 
+.cairo-text {
+    font-family: 'Cairo', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: gray;
+}
+
 .heading {
     background-color: #ff6666;
     width: 50%;
