--- a/src/app/sections/author/author.component.css
+++ b/src/app/sections/author/author.component.css
@@ -1,6 +1,16 @@
 .horiz-padding {
-    margin-left: 13%;
-    margin-right: 13%;
+  margin-left: 13%;
+  margin-right: 13%;
+}
+
+.center-padding {
+  margin-left: 34%;
+  margin-right: 34%;
+}
+
+.center-padding-mobile {
+  margin-left: 5%;
+  margin-right: 5%
 }
 
 .author-hr {
@@ -12,6 +22,13 @@
     font-family: 'Cairo', sans-serif;
     font-weight: 700;
     font-size: 30px;
+    color: gray;
+}
+
+.cairo-text {
+    font-family: 'Cairo', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
     color: gray;
 }
 
