Adding link back to home page

--- a/src/app/modules/post-page/podcast-post-page/podcast-post-page.component.html
+++ b/src/app/modules/post-page/podcast-post-page/podcast-post-page.component.html
@@ -6,3 +6,9 @@
 <ng-container>
   <h1>{{ postData.title }}</h1>
 </ng-container>
+
+<!-- Link back to the home page -->
+<app-home-page-button></app-home-page-button>
+
+<!-- Footer -->
+<app-footer></app-footer>
