--- a/src/app/modules/post-page/text-post-page/text-post-page.component.html
+++ b/src/app/modules/post-page/text-post-page/text-post-page.component.html
@@ -43,5 +43,8 @@
 <!-- Show post content -->
 <div class="post-content" [innerHTML]="this.getPostContent()" ></div>
 
+<!-- Link back to the home page -->
+<app-home-page-button></app-home-page-button>
+
 <!-- Footer -->
 <app-footer></app-footer>
