--- a/src/app/modules/post-page/podcast-post-page/podcast-post-page.component.html
+++ b/src/app/modules/post-page/podcast-post-page/podcast-post-page.component.html
@@ -8,7 +8,7 @@
 </ng-container>
 
 <!-- Link back to the home page -->
-<app-home-page-button></app-home-page-button>
+<app-home-page-button [pageIdToReturnTo]="this.getPageIdFromPostTopic()"></app-home-page-button>
 
 <!-- Footer -->
 <app-footer></app-footer>
