--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -18,6 +18,14 @@
         <li class="footer-text-empty">.</li>
       </ul>
 
+      <!-- Science -->
+      <ul class="footer-list">
+        <li><a href="/science" [ngClass]="getSubheaderClassName()">Science</a></li>
+        <li><a href="/category/covid-19" class="footer-text">COVID-19</a></li>
+        <li><a href="/category/genetics" class="footer-text">Genetics</a></li>
+        <li><a href="/category/con-science" class="footer-text">Con-Science</a></li>
+      </ul>
+
       <!-- Technology -->
       <ul class="footer-list">
         <li><a href="/technology" [ngClass]="getSubheaderClassName()">Technology</a></li>
