--- a/src/app/sections/frontpage/frontpage.component.html
+++ b/src/app/sections/frontpage/frontpage.component.html
@@ -14,6 +14,14 @@
     <!-- Podcasts subsection (gallery list) -->
     <app-posts-list [listType]="2" [posts]="this.podcastSubSectionPosts"></app-posts-list>
 
+    <!-- Science subsection (row-list) -->
+    <a href="/science" class="subsection-header">
+      Science
+    </a>
+    <div class="science-posts">
+      <app-posts-list [listType]="3" [posts]="this.scienceSectionPosts"></app-posts-list>
+    </div>
+
     <!-- Technology subsection (row-list) -->
     <a href="/technology" class="subsection-header">
       Technology
