Adding initial changes

--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -5,7 +5,9 @@
 
       <!-- Newsletter -->
       <ul class="footer-list">
-        <li><a href="/newsletter" class="newsletter-0">Sign up <u>here</u> for our newsletter!</a></li>
+        <li>
+          <a href="/newsletter" class="newsletter-0">Sign up <u>here</u> for our newsletter!</a>
+        </li>
         <li class="newsletter-1">You scrolled down here for something, right?</li>
         <li class="newsletter-2">Don't worry, we don't believe in spamming inboxes.</li>
       </ul>
