--- a/src/styles.css
+++ b/src/styles.css
@@ -111,3 +111,6 @@
 science-posts {
   margin-top: 10px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
