--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .dbl-background {
-    background-color: #000971
+  background-color: #000971
 }
 
 .container {
@@ -18,9 +18,9 @@
 /* -- menu item --  */
 
 .menu-item {
-    font-family: 'Cairo', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
+  font-family: 'Cairo', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
 }
 
 /* unvisited link */
@@ -111,3 +111,6 @@
 science-posts {
   margin-top: 10px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
