--- a/src/app/modules/social-media-links/social-media-links.component.html
+++ b/src/app/modules/social-media-links/social-media-links.component.html
@@ -4,6 +4,7 @@
     <a href="{{this.facebookLink}}" target="_blank" class="fa fa-facebook"></a>
     <a href="{{this.twitterLink}}"  target="_blank" class="fa fa-twitter"></a>
     <a href="{{this.instagramLink}}" target="_blank" class="fa fa-instagram"></a>
+    <a href="{{this.newsletterLink}}" target="_blank" class="fa fa-envelope"></a>
     <a href="{{this.rssLink}}" target="_blank" class="fa fa-rss"></a>
 </div>
 
