--- a/src/styles.css
+++ b/src/styles.css
@@ -114,3 +114,31 @@ science-posts {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* -- For buttons -- */
+.button-center {
+  text-align: center;
+}
+
+.button {
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;
+  border: 2px solid #000971;
+
+  font-family: 'Cairo', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.button:hover {
+  background-color: #000971;
+  color: white;
+}
